tiny size adjustment to avoid overflow on task form container.

--- a/Web prosjekt/index.css
+++ b/Web prosjekt/index.css
@@ -139,7 +139,7 @@ h1{
     text-align: center;
     background-color: white;
     border:2px solid black;
-    height: 200px;
+    height: 225px;
     width:240px;
     box-shadow: 3px 3px 3px #00000077;
 }
